# tree-sitter-we

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  example.we  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-we.pc.in
bindings/c/tree_sitter/: tree-sitter-we.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_we/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterWeTests/: TreeSitterWeTests.swift
queries/: highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
