[package]
name = "tree-sitter-we"
description = "A simple typed and compiled language, trying to emulate the ease of use of lua and python without a garbage collector."
version = "0.1.0"
authors = ["Lini <119787571+B1nus@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "we"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/b1nus/tree-sitter-we"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
